Fix squishable

--- a/styles/style.css
+++ b/styles/style.css
@@ -1,3 +1,7 @@
+html {
+    height: 100%;
+}
+
 body {
     /* overflow-x: hidden; */
     /* background-image: linear-gradient(to right, red , yellow); */
@@ -45,10 +49,10 @@ body {
     justify-content: center;
     align-items: center;
     width: 100%;
-    /* height: 90%; */
 }
 
 .page {
+    flex-grow: 1;
     background-color: white;
 }
 
